test/snapshots/marker-dup-target.stderr
Error: Duplicate identifier
   ╭─[ ./test/src/marker-dup.int:2:1 ]
   │
 4 │     marker a;
   │     ────┬────  
   │         ╰────── Item with name a previously defined here
   │
   ├─[ ./test/src/marker-dup.int:2:1 ]
   │
 2 │ marker a;
   │ ────┬────  
   │     ╰────── Redeclaration here
───╯